# sat-a10

./: .gitignore  CMakeLists.txt  STM32U585ZITXQ_FLASH.ld  openocd.cfg
cube/: .cproject  .mxproject  STM32U585ZITXQ_RAM.ld  cube.ioc
cube/Core/Inc/: stm32u5xx_hal_conf.h  stm32u5xx_it.h
cube/Core/Src/: gpio.c  main.c  stm32u5xx_it.c  usb_otg.c
src/: FreeRTOSConfig.h  core.c  core.h  freertos_kernel_misc.c  main.c  net.c  net.h  net_config.h  os_port_config.h  usbd_conf.c  usbd_conf.h
